# market-data-quant

./: .gitignore  indicators.py  mean_revert.py  pyproject.toml  test.py
data/results/: dte_strike_sweep.csv  sizing_monte_carlo.csv  tier1_real_options_backtest.csv
data/results/experiment_b/: _comparison.csv  _drop_size_analysis.csv  _grid_search.csv  _grid_search_baseline.csv  _validation_splits.csv  baseline__QQQ__step_1.00_t1_10_t2_5__morning_0930_1115.csv  baseline__QQQ__step_10.00__rth_0930_1600.csv  baseline__SPY__step_0.50_t1_5_t2_1__rth_0930_1600.csv  baseline__SPY__step_1.00_t1_5__morning_0930_1115.csv  (+14 more)
scripts/: analyze_drop_size.py  analyze_francisco_trades.py  backtest_gap_reversion.py  baseline_grid_sweep.py  check_alpaca.py  contract_pricing.py  download_bars.py  dte_strike_sweep.py  dte_sweep_gap_reversion.py  dynamic_poc_today.py  improve_gap_reversion.py  intraday_entry_exit.py  real_option_backtest.py  replay_last_week.py  replay_spy_today.py  replay_spy_volume_today.py  replay_today.py  report_experiment_b.py  run_experiment_b.py  run_experiment_c.py  run_experiment_d.py  run_experiment_e.py  run_experiment_e_dynamic.py  run_experiment_f.py  run_gap_paper.py  run_live_paper.py  run_param_sweep.py  run_spy_paper.py  session_report.py  sizing_monte_carlo.py  smoke_gap_runner.py  smoke_runner_offline.py  smoke_spy_runner.py  smoke_test.py  spy_volume_study_step1.py  spy_volume_study_step2.py  spy_volume_study_step3a.py  spy_volume_study_step3c.py  update_profiles.py  validate_qqq_momentum.py  (+3 more)
src/mdq/: __init__.py  config.py
src/mdq/data/: bars.py  (+3 more)
(+52 files in other folders)
